--- a/src/main/resources/templates/layout-dashboard.html
+++ b/src/main/resources/templates/layout-dashboard.html
@@ -77,6 +77,27 @@
                 <span th:text="${danger}"></span>
                 <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Cerrar"></button>
             </div>
+            <!-- Modal de confirmación -->
+            <div class="modal fade" id="confirmDeleteModal" tabindex="-1" aria-labelledby="confirmDeleteModalLabel"
+                aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header bg-danger text-white">
+                            <h5 class="modal-title" id="confirmDeleteModalLabel">Confirmar borrado</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                aria-label="Cerrar"></button>
+                        </div>
+                        <div class="modal-body">
+                            ¿Estás seguro que quieres borrar este producto? Esta acción no se puede deshacer.
+                            <!-- O se puede preguntar lo que quieras hacer antes de confirmar la acción -->
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+                            <a id="btnConfirmDelete" href="#" class="btn btn-danger">Borrar</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
 
             <!-- Fragment -->
