--- a/src/main/resources/templates/layout-dashboard.html
+++ b/src/main/resources/templates/layout-dashboard.html
@@ -5,6 +5,12 @@
     <meta charset="UTF-8">
     <title>Dashboard POS</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- jQuery -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <!-- Select2 CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+    <!-- Select2 JS -->
+    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
@@ -32,13 +38,14 @@
         <!-- Sidebar -->
 
 
-        <nav class="bg-dark text-white p-3 vh-100" style="width:230px;">
+        <nav class="bg-dark text-white p-3" style="width:230px; min-height: 100vh; height: auto;">
             <h4 class="mb-4">Administración</h4>
             <ul class="nav flex-column">
                 <li class="nav-item"><a th:href="@{/dashboard}" class="nav-link text-white">Dashboard</a></li>
                 <li class="nav-item"><a th:href="@{/productos/listadoAdmin}" class="nav-link text-white">Productos</a>
                 </li>
                 <li class="nav-item"><a href="#" class="nav-link text-white">Categorías</a></li>
+                <li class="nav-item"><a th:href="@{/ofertas/listadoAdmin}" class="nav-link text-white">Ofertas</a></li>
                 <li class="nav-item"><a th:href="@{/usuarios/nuevo}" class="nav-link text-white">Usuarios</a></li>
                 <li class="nav-item"><a href="#" class="nav-link text-white">Ventas</a></li>
                 <li class="nav-item"><a href="#" class="nav-link text-white">Reportes</a></li>
@@ -129,8 +136,6 @@
 
 
     <!-- Para que se cierren los Alert Bootstrap -->
-    <!-- jQuery -->
-    <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
     <script>
         setInterval("cerrar()", 3000);
 
@@ -139,6 +144,16 @@
                 $(this).hide();
             })
         }
+    </script>
+
+    <script>
+        $(document).ready(function () {
+            $('#productos').select2({
+                placeholder: "Escribe para buscar productos",
+                allowClear: true,
+                width: 'resolve'
+            });
+        });
     </script>
 
 
