--- a/src/main/resources/templates/ofertas/ofertas-form.html
+++ b/src/main/resources/templates/ofertas/ofertas-form.html
@@ -35,7 +35,7 @@
 
                     <!-- Productos -->
                     <div class="mb-3">
-                        <label for="productos" class="form-label">Seleccionar Productos</label>
+                        <label for="productos" class="form-label">Seleccionar Productos (3 máximo)</label>
                         <select id="productos" name="productos" class="form-select" multiple="multiple"
                             style="width: 100%;">
                             <!-- <option th:each="prod : ${listaProductos}" th:value="${prod.id}" th:text="${prod.nombre}" th:selected="${oferta.productos.contains(prod)}">
