--- a/src/main/resources/templates/productos/productos-form.html
+++ b/src/main/resources/templates/productos/productos-form.html
@@ -6,52 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title th:text="${titulo}"></title>
-    <script>
-        document.addEventListener('DOMContentLoaded', function () {
-            console.log('DOM Content Loaded!'); // Add this line
-            const departamentoSelect = document.getElementById('departamentoFiltro');
-            const categoriaSelect = document.getElementById('categoriaSelect');
-
-            // Clonamos las opciones para evitar perderlas al usar innerHTML
-            const allCategorias = Array.from(categoriaSelect.options).map(opt => opt.cloneNode(true));
-            const defaultOption = allCategorias[0];
-
-            departamentoSelect.addEventListener('change', function () {
-                const selectedDepto = this.value;
-
-                // Limpiar y reiniciar el select de categorías
-                categoriaSelect.innerHTML = '';
-                categoriaSelect.appendChild(defaultOption.cloneNode(true));
-
-                allCategorias.forEach(option => {
-                    const depto = option.getAttribute('data-depto');
-                    if (option.value !== '' && depto === selectedDepto) {
-                        categoriaSelect.appendChild(option.cloneNode(true));
-                    }
-                });
-            });
-        });
-    </script>
-
-    <script>
-        (function () {
-            'use strict';
-            window.addEventListener('load', function () {
-                // Obtener todos los formularios con la clase .needs-validation
-                var forms = document.getElementsByClassName('needs-validation');
-                // Validar cada uno al hacer submit
-                Array.prototype.filter.call(forms, function (form) {
-                    form.addEventListener('submit', function (event) {
-                        if (!form.checkValidity()) {
-                            event.preventDefault();
-                            event.stopPropagation();
-                        }
-                        form.classList.add('was-validated');
-                    }, false);
-                });
-            }, false);
-        })();
-    </script>
+    
 
     <style>
         .container {
@@ -155,7 +110,7 @@
     </div>
 
     <!-- Mis JS -->
-    <script th:fragment="js"></script>
+    <script th:fragment="js" th:src="@{/js/productos-form.js}"></script>
     
 </body>
 
