--- a/src/main/resources/templates/layout-dashboard.html
+++ b/src/main/resources/templates/layout-dashboard.html
@@ -48,7 +48,7 @@
                 <li class="nav-item"><a th:href="@{/ofertas/listadoAdmin}" class="nav-link text-white">Ofertas</a></li>
                 <li class="nav-item"><a th:href="@{/usuarios/listadoAdmin}" class="nav-link text-white">Usuarios</a>
                 </li>
-                <li class="nav-item"><a href="#" class="nav-link text-white">Ventas</a></li>
+                <li class="nav-item"><a th:href="@{/ventas/nuevo}" class="nav-link text-white">Ventas</a></li>
                 <li class="nav-item"><a href="#" class="nav-link text-white">Reportes</a></li>
                 <li class="nav-item"><a href="#" class="nav-link text-white">Configuración</a></li>
                 <li class="nav-item"><a th:href="@{/}" class="nav-link text-white">Stella</a></li>
